====================================
xx/xx/xx release x.x
====================================
- Nosetests integrated in setup
- Improved unit tests
- Config file if not provided will try
to find it in $HOME/.log4tailer, as suggested
by Carlo Bertoldi 
- Better regex avoiding false positives when 
log level in a word as suggested by 
Carlo Bertoldi
- Configurable background color
- Some bug fixes
- Updated documentation

====================================
24/01/10 release 2.2
====================================
- bug fix in pipeOut method in LogTailer 
was breaking interface in Actions
- cleaned and provided more unit tests
- testtools being used sometimes, which provides 
extended methods to unittest
- SSH tailing tries to authenticate using 
rsa key first

====================================
17/10/09 release 2.0
====================================
- Added additional level: Critical
- Fixed tail last n lines and documented
- Fixed tail when log was empty it crashed
- Fixed date in emailaction as specified in RFC 2822
- Added logging in debug
- Added remote tailing over SSH (SSH tailing)
- updated documentation

====================================
05/09/09 release 1.50
====================================
- Every log can have its own set of 
targets if specified in config file
- InactivityAction can notify by email 
if specified in config file.
- Fixed behaviour in the Timer. If there 
were undesirable effects during gapnotification 
time, it restarted the Timer, hence not 
notifying after gaptime.
- Properties class if not found key, 
does not throw exception, returns None 
for convenience.
- Targets are now reported in the final 
report
- Provided config file for convenience
- Report can be sent by email at 
any given time provided in config
- Every log has its own timers in order 
to monitor them separately when mail action 
is set up.
- Updated documentation


====================================
06/08/09 release 1.45 
====================================