@@ -10,6 +10,7 @@ by Carlo Bertoldi
 log level in a word as suggested by 
 Carlo Bertoldi
 - Configurable background color
+- each target with its own set of colors
 - Some bug fixes
 - Updated documentation
 
